--- a/menu.html
+++ b/menu.html
@@ -168,7 +168,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Placeholder.png" alt="">
+                  <img src="images/" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -214,7 +214,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/ultimate-loaded-crispy-potato-skins-recipe_500x286.webp" alt="">
+                  <img src="images/Fried pickles.webp" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -262,11 +262,11 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/ultimate-loaded-crispy-potato-skins-recipe_500x286.webp" alt="">
+                  <img src="images/onion_rings_JPG_500x286.webp" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                  Sliders                  
+                  Onion Rings                 
                   </h5>
                   <p>
                     Description of another new item goes here. You can provide details about the ingredients, cooking method, and any other relevant information.
@@ -309,7 +309,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/ultimate-loaded-crispy-potato-skins-recipe_500x286.webp" alt="">
+                  <img src="images/pretzelbites_JPEG_500x286.webp" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -356,7 +356,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/ultimate-loaded-crispy-potato-skins-recipe_500x286.webp" alt="">
+                  <img src="images/chips_and_guac_JPG_500x286.webp" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -619,7 +619,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Placeholder.png" alt="Another Burger Image">
+                  <img src="images/Fried-Chicken-Sandwiches_500x286.webp" alt="Another Burger Image">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -645,7 +645,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Placeholder.png" alt="Another Burger Image">
+                  <img src="images/shutterstock_302106962-scaled_1_500x286.webp" alt="Another Burger Image">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -671,7 +671,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Placeholder.png" alt="Another Burger Image">
+                  <img src="images/Popeyes-Cajun-Fries_500x286.png" alt="Another Burger Image">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -819,7 +819,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Placeholder.png" alt="Another Burger Image">
+                  <img src="images/new-york-strip-steak-square-3_500x286.webp" alt="Another Burger Image">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -1021,7 +1021,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Placeholder.png" alt="Another Appetizer Image">
+                  <img src="images/pretzelbites_JPEG_500x286.webp" alt="Another Appetizer Image">
                 </div>
                 <div class="detail-box">
                   <h5>
