--- a/menu.html
+++ b/menu.html
@@ -175,7 +175,7 @@
                     Chicken Wings
                   </h5>
                   <p>
-                    golden-brown crispy tots, cheddar cheese, crispy bacon, green onions, and a side of sour cream
+                    6-Count or 12-count Boneless Wings coated in a variety of sauces of your choosing.
                   </p>
                   <div class="options">
                     <h6>
