--- a/order_online.html
+++ b/order_online.html
@@ -23,7 +23,7 @@
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
-  <!--owl slider stylesheet -->
+  <!-- owl slider stylesheet -->
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
   <!-- nice select  -->
@@ -70,24 +70,30 @@
       border: none;
       cursor: pointer;
     }
+
+    /* Add custom styles for the JotForm container */
+    .jotform-container {
+      max-width: 600px;
+      margin: 50px auto;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      background-color: #fff; /* Adjust the background color */
+    }
   </style>
 </head>
 
 <body>
 
-  <div class="hero_area">
-    <div class="bg-box">
-      <img src="images/hero-bg.jpg" alt="">
-    </div>
-    <!-- header section starts -->
-    <header class="header_section">
-      <div class="container">
-        <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="index.html">
-            <span>
-              Game Day Grill
-            </span>
-          </a>
+  <!-- header section starts -->
+  <header class="header_section">
+    <div class="container">
+      <nav class="navbar navbar-expand-lg custom_nav-container ">
+        <a class="navbar-brand" href="index.html">
+          <span>
+            Game Day Grill
+          </span>
+        </a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -142,13 +148,15 @@
 
 
 
+ <!-- Add the JotForm container -->
+ <div class="jotform-container">
+  <script type="text/javascript" src="https://form.jotform.com/jsform/233407357024148"></script>
+</div>
 
-
-    <!-- footer section -->
-  
- <footer class="footer_section">
-    <div class="container">
-      <div class="row">
+<!-- footer section -->
+<footer class="footer_section">
+  <div class="container">
+    <div class="row">
         <div class="col-md-4 footer-col">
           <div class="footer_contact">
             <h4>
