ii have added the order place i am still working on that form
i have removed and fixed a lot of stuff we shoul dbe doen by next week monday or tusday

--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@
             </ul>
             <div class="user_option">
               <!-- Your existing user options go here -->
-              <a href="menu.html" class="order_online">
+              <a href="order_online.html" class="order_online">
                 Order Online
               </a>
             </div>
