--- a/index.html
+++ b/index.html
@@ -541,14 +541,14 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                We Are Game day grill
+                We Are Game Day Grill
               </h2>
             </div>
             <p>
               The Game Day Grill launched its website to customers in 2023 and is ran by Amr Daraghmeh, Conner Snyder,
               and Colton Abel.
             </p>
-            <a href="">
+            <a href="about.html">
               Read More
             </a>
           </div>
@@ -583,7 +583,7 @@
               <div>
                 <select class="form-control nice-select wide">
                   <option value="" disabled selected>
-                    How many persons?
+                    How many people?
                   </option>
                   <option value="">
                     2
@@ -626,7 +626,7 @@
   <section class="client_section layout_padding-bottom">
     <div class="container">
       <div class="heading_container heading_center psudo_white_primary mb_45">
-        <h2>What Says Our Customers</h2>
+        <h2>What Our Customers Say</h2>
       </div>
       <div class="carousel-wrap row">
         <div class="owl-carousel client_owl-carousel">
