--- a/about.html
+++ b/about.html
@@ -79,8 +79,18 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="book.html">Book Table</a>
-            </li>
-          </ul>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMore" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                  More
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMore">
+                  <a class="dropdown-item" href="team.html">Team</a>
+                  <a class="dropdown-item" href="contact.html">Contact</a>
+                  <!-- Add more items here as needed -->
+                </div>
+              </li>
+            </ul>
           <div class="user_option">
             <a href="order_online.html" class="order_online">
               Order Online
