--- a/order_online.html
+++ b/order_online.html
@@ -130,7 +130,7 @@
             <div class="user_option">
               <!-- Your existing user options go here -->
               <a href="menu.html" class="order_online">
-                Order Online
+                View Menu
               </a>
             </div>
           </div>
