items and description

--- a/menu.html
+++ b/menu.html
@@ -398,7 +398,7 @@
                     BBQ Bacon Cheddar Burger
                   </h5>
                   <p>
-                    Savor our custom-cooked lean ground beef, bacon-trimmed, with BBQ, cheddar, lettuce, tomato, and grilled onions on a soft white bun.
+                    lean ground beef cooked to order, bacon-trimmed, with BBQ, cheddar, lettuce, tomato, and grilled onions on a soft white bun.
                     <p>  
                     </p>   
                   </p>   
@@ -446,7 +446,7 @@
                     Hickory-Smoked BBQ Pulled Pork
                   </h5>
                   <p>
-                    make this shorter Savor the mouthwatering goodness of our Hickory-Smoked BBQ Pulled Pork on a soft wheat button
+                    Hickory-Smoked BBQ Pulled Pork on a soft wheat button
                   </p>
                   <div class="options">
                     <h6>
@@ -518,7 +518,7 @@
                     Prime Rib Sandwich
                   </h5>
                   <p>
-                    Indulge in our mouthwatering Grilled and blackened ribeye on an onion bun, adorned with sautéed onions and melted Swiss cheese for a delectable burst of flavors.
+                    Grilled and blackened ribeye on an onion bun, sautéed onions and melted Swiss cheese
                   </p>
                   <div class="options">
                     <h6>
@@ -587,10 +587,10 @@
                     Chicken Sandwich
                   </h5>
                   <p>
-                    a golden-brown crust, seasoned chicken filet, served between toasted buns, and pickles.
+                    a golden-brown crust, seasoned chicken filet, served between toasted buns, and pickles
                   <div class="options">
                     <h6>
-                      $4.99 
+                      $5.99 
                     </h6>
                     <a href="#">
                       </svg>
@@ -611,10 +611,10 @@
                     Mac & cheese
                   </h5>
                   <p>
-                    Put what ever you want here for this 
+                    elbow macaroni with velvety cheese topped with pulled pork
                   <div class="options">
                     <h6>
-                      $8.49 <!-- Replace with the actual price -->
+                      $8.49
                     </h6>
                     <a href="#">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -637,10 +637,10 @@
                     Cajun Fries 
                   </h5>
                   <p>
-                    Put what ever you want here for this 
+                    A sliced russet potato, fried in peanut oil to a crisp outside, with a spicy garlic seasoning 
                   <div class="options">
                     <h6>
-                      $8.49 <!-- Replace with the actual price -->
+                      $4.49 <!-- Replace with the actual price -->
                     </h6>
                     <a href="#">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -664,8 +664,7 @@
                     Coleslaw
                   </h5>
                   <p>
-                    Indulge in the satisfying medley of chopped raw cabbage, crisp carrots, and flavorful onions, all  blended with our  rich mayonnaise dressing.
-
+                    chopped raw cabbage, crisp carrots, and flavorful onions, all blended with our rich mayonnaise dressing.
                   </p>
                   <div class="options">
                     <h6>
@@ -715,7 +714,7 @@
                     Ribeye
                   </h5>
                   <p>
-                    Indulge in our Grilled and blackened ribeye on an onion bun, boasting juicy marbling, mouthwatering tenderness, and robust, beefy flavor—cooked just the way you like it.
+                    Grilled and blackened ribeye on an onion bun, boasting juicy marbling, mouthwatering tenderness, and robust, beefy flavor—cooked just the way you like it.
                     <p>  
                     </p>   
                   </p>   
