--- a/index.html
+++ b/index.html
@@ -286,15 +286,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Black & Blue Burger
+                    Chicken Sandwich
                   </h5>
                   <p>
-                    Lean ground beef cooked to order, blackened, and topped with Bleu cheese crumbles. Served on rye
-                    with Swiss, grilled onions, lettuce, and tomato. Finished with bleu cheese dressing
+                    A golden-brown crust, seasoned chicken filet, served between toasted buns, and pickles
                   </p>
                   <div class="options">
                     <h6>
-                      $11.49
+                      $5.99
                     </h6>
                
                   </div>
@@ -314,7 +313,8 @@
                   </h5>
                   <p>
                     Lean ground beef cooked to order trimmed with bacon, BBQ, cheddar cheese, lettuce, tomato, grilled
-                    onions on a white bun </p>
+                    onions on a white bun 
+                  </p>
                   <div class="options">
                     <h6>
                       $9.99
@@ -431,7 +431,7 @@
                     Prime Rib Sandwich
                   </h5>
                   <p>
-                    Grilled and blackened ribeye on an onion bun, smothered with sautéed onions and Swiss cheese
+                    Grilled and blackened ribeye on an onion bun, sautéed onions and melted Swiss cheese
                   </p>
                   <div class="options">
                     <h6>
@@ -477,7 +477,7 @@
                     Coleslaw
                   </h5>
                   <p>
-                    chopped raw cabbage, carrots, and onions, with creamy rich mayonnaise
+                    Indulge in the satisfying medley of chooped raw cabbage, crisp carrots, and flavorful onions, all blended with our rich mayonnaise dressing.
                   </p>
                   <div class="options">
                     <h6>
