fixing the index carasel

--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
       <div class="carousel-item active">
         <div class="container ">
           <div class="row">
-            <img src="images/" alt="">
+            <img src="images/BBQ_Bacon_CHeddar_Burger1-PhotoRoom-removebg-preview.png" alt="">
             <div class="col-md-7 col-lg-6 ">
               <div class="detail-box">
                 <h1>
                   Savor the Flavor!
                 </h1>
                 <p>
-                  Indulge in the Juicy Perfection of Our Prime Steaks
+Savor the perfection of our BBQ Bacon Cheddar Burger!  Flame-grilled to juicy perfection, it's a symphony of smoky bacon, melted cheddar, and a touch of BBQ magic. Spice it up, pair it with fresh fixings, and relish the golden crunch of hand-cut fries. Limited time only – dive into burger paradise today!
                 </p>
                 <div class="">
                   <a href="menu.html" class="btn1">
@@ -253,6 +253,14 @@
         </div>
       </div>
     </div>
+    <style>
+      .carousel-item img {
+        max-height: 500px; /* Adjust the maximum height as needed */
+        width: auto; /* Maintain the aspect ratio */
+        display: block; /* Remove any default inline styling */
+        margin: 0 auto; /* Center the image */
+      }
+    </style>
   </section>
 
   <!-- end offer section -->
