--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ Savor the perfection of our BBQ Bacon Cheddar Burger!  Flame-grilled to juicy pe
       <div class="carousel-item">
         <div class="container ">
           <div class="row">
-            <img src="images/BBQ Bacon CHeddar Burger1.jpg" alt="">
+            <img src="" alt="">
             <div class="col-md-7 col-lg-6 ">
               <div class="detail-box">
                 <h1>
