--- a/menu.html
+++ b/menu.html
@@ -155,7 +155,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/" alt="">
+                  <img src="images/theworldend_1_500x286.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -600,30 +600,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all burger">
-            <div class="box">
-              <div>
-                <div class="images">
-                  <img src="images/Fried-Chicken-Sandwiches_500x286.webp" alt="Another Burger Image">
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Classic Burger
-                  </h5>
-                  <p>
-                    lettuce, tomato, onion, pickle, ketchup, mustard and mayo on a meat patty, between two buns
-                  <div class="options">
-                    <h6>
-                      $9.99 
-                    </h6>
-                    <a href="#">
-                      </svg>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          
           <div class="col-sm-6 col-lg-4 all sides">
             <div class="box">
               <div>
