--- a/menu.html
+++ b/menu.html
@@ -896,7 +896,7 @@
             <div class="box">
                 <div>
                     <div class="images">
-                        <img src="images/Placeholder.png" alt="Another Appetizer Image">
+                        <img src="images/rsz_1pexels-jiri-ikonomidis-13896781.jpg" alt="Another Appetizer Image">
                     </div>
                     <div class="detail-box">
                         <h5>
