--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                   Savor the Flavor!
                 </h1>
                 <p>
-Savor the perfection of our BBQ Bacon Cheddar Burger!  Flame-grilled to juicy perfection, it's a symphony of smoky bacon, melted cheddar, and a touch of BBQ magic. Spice it up, pair it with fresh fixings, and relish the golden crunch of hand-cut fries. Limited time only – dive into burger paradise today!
+                  Savor the perfection of our BBQ Bacon Cheddar Burger!  Flame-grilled to juicy perfection, it's a symphony of smoky bacon, melted cheddar, and a touch of BBQ magic. Spice it up, pair it with fresh fixings, and relish the golden crunch of hand-cut fries. Limited time only - dive into burger paradise today!
                 </p>
                 <div class="">
                   <a href="menu.html" class="btn1">
@@ -152,7 +152,7 @@ Savor the perfection of our BBQ Bacon Cheddar Burger!  Flame-grilled to juicy pe
       <div class="carousel-item">
         <div class="container ">
           <div class="row">
-            <img src="" alt="">
+            <img src="images/BBQ Bacon CHeddar Burger1.jpg" alt="">
             <div class="col-md-7 col-lg-6 ">
               <div class="detail-box">
                 <h1>
@@ -197,13 +197,13 @@ Savor the perfection of our BBQ Bacon Cheddar Burger!  Flame-grilled to juicy pe
                 <img src="images/o1.jpg" alt="">
               </div>
               <div class="detail-box">
-                <h>
+                <h5>
                   Classic Combo Deal
                 </h5>
                 <h6>
-                  <span> $10.99
-                    <h5>
-                  </span> a classic burger ( beef, chicken, or veggie) with a side of your choice of side
+                  <span> $16.99
+                    <h6>
+                  </span> Get two classic burgers ( beef, chicken, or veggie) with a side of your choice and drinks
                 </h6>
                 </h6>
                 <a href="menu.html">
@@ -231,12 +231,12 @@ Savor the perfection of our BBQ Bacon Cheddar Burger!  Flame-grilled to juicy pe
               </div>
               <div class="detail-box">
                 <h5>
-                  Family Feast
+                  Grumbing Group
                 </h5>
                 <h6>
-                  <span> $39.99
+                  <span> $44.99
                     <h6>
-                  </span>A combo for the whole family! Get four burgers and four orders of fries or any side
+                  </span>A combo for the whole group! Get any four burgers and four orders of any side and drinks
                 </h6>
 
                 </h6>
@@ -253,7 +253,6 @@ Savor the perfection of our BBQ Bacon Cheddar Burger!  Flame-grilled to juicy pe
         </div>
       </div>
     </div>
-    
   </section>
 
   <!-- end offer section -->
@@ -452,15 +451,14 @@ Savor the perfection of our BBQ Bacon Cheddar Burger!  Flame-grilled to juicy pe
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pasta
+                    Loaded Potato Skins
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    Loaded with Cheddar and Mozzarella cheese, sprinkled with bacon bits, and sour crean on the side
                   </p>
                   <div class="options">
                     <h6>
-                      $10
+                      $10.49
                     </h6>
                   </div>
                 </div>
